[project]
name = "scepter-validation-vars"
version = "0.1.0"
description = "validation variables for SCEPTER modeling"
readme = "README.md"
requires-python = "==3.13.5"
dependencies = [
    "async-tiff>=0.7.1",
    "dask>=2026.3.0",
    "distributed>=2026.3.0",
    "flox>=0.11.2",
    "geopandas>=1.1.3",
    "h5netcdf>=1.8.1",
    "h5py>=3.16.0",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.4",
    "obstore>=0.9.2",
    "pyarrow>=23.0.1",
    "rasterix>=0.2.1",
    "rioxarray>=0.22.0",
    "s3fs>=2026.3.0",
    "virtual-tiff>=0.3.1",
    "virtualizarr",
    "xarray>=2026.2.0",
]

[tool.uv.sources]
virtualizarr = { git = "https://github.com/zarr-developers/VirtualiZarr" }
